feat: Implement product detail components and API endpoints
- Added `productDetailImage.vue` for displaying product images with a carousel and zoom functionality.
- Added `productDetailInfo.vue` for displaying product information including title, rating, description, price, and stock status.
- Created API endpoints for fetching product categories, individual products, and all products with filtering options.
- Implemented order submission API with validation and mock processing.
- Introduced product types for server-side use to maintain type safety across components and APIs.
- Updated documentation to reflect new components and API functionalities.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "typecheck": "nuxt typecheck",
-    "lint": "oxlint && eslint .",
-    "lint:oxlint": "oxlint",
+    "lint": "oxlint --type-aware && eslint .",
+    "lint:oxlint": "oxlint --type-aware",
     "lint:eslint": "eslint ."
   },
   "dependencies": {
@@ -31,6 +31,7 @@
   "devDependencies": {
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-oxlint": "^1.25.0",
-    "oxlint": "^1.25.0"
+    "oxlint": "^1.25.0",
+    "oxlint-tsgolint": "^0.4.0"
   }
 }
