Add unit tests for product filtering and sorting utilities, currency formatting and parsing, and configure Vitest for testing
- Implement comprehensive unit tests for product filtering and sorting functions in `filters.test.ts`, covering various scenarios including search, category, price range, rating, stock, and combined filters.
- Add tests for currency utility functions in `currency.test.ts`, ensuring correct formatting and parsing of currency strings, including edge cases and property-based tests.
- Configure Vitest in `vitest.config.ts` to support unit testing for both utility functions and Nuxt components, with coverage reporting.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ logs
 .idea
 .playwright
 
+# Test coverage
+coverage/
+.vitest/
+
 # VSCode (allow settings.json for team consistency)
 .vscode/*
 !.vscode/settings.json
