--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -30,6 +30,7 @@
     "no-ternary": "off",
     "no-magic-numbers": "off",
     "no-script-url": "off",
+    "max-lines": "off",
     "max-lines-per-function": "off",
     "unicorn/filename-case": "off",
     "unicorn/catch-error-name": "off",
@@ -40,6 +41,8 @@
     "unicorn/switch-case-braces": "off",
     "unicorn/prefer-string-replace-all": "off",
     "unicorn/prefer-global-this": "off",
+    "unicorn/consistent-function-scoping": "off",
+    "unicorn/prefer-at": "off",
     "typescript/await-thenable": "error",
     "typescript/no-array-delete": "error",
     "typescript/no-base-to-string": "error",
@@ -56,14 +59,14 @@
     "typescript/no-unnecessary-boolean-literal-compare": "error",
     "typescript/no-unnecessary-template-expression": "error",
     "typescript/no-unnecessary-type-arguments": "error",
-    "typescript/no-unnecessary-type-assertion": "error",
-    "typescript/no-unsafe-argument": "error",
-    "typescript/no-unsafe-assignment": "error",
+    "typescript/no-unnecessary-type-assertion": "warn",
+    "typescript/no-unsafe-argument": "warn",
+    "typescript/no-unsafe-assignment": "warn",
     "typescript/no-unsafe-call": "error",
     "typescript/no-unsafe-enum-comparison": "error",
-    "typescript/no-unsafe-member-access": "error",
+    "typescript/no-unsafe-member-access": "warn",
     "typescript/no-unsafe-return": "error",
-    "typescript/no-unsafe-type-assertion": "error",
+    "typescript/no-unsafe-type-assertion": "warn",
     "typescript/no-unsafe-unary-minus": "error",
     "typescript/non-nullable-type-assertion-style": "error",
     "typescript/only-throw-error": "error",
