--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "typecheck": "nuxt typecheck",
     "lint": "oxlint --type-aware && eslint .",
     "lint:oxlint": "oxlint --type-aware",
-    "lint:eslint": "eslint ."
+    "lint:eslint": "eslint .",
+    "test": "vitest",
+    "test:unit": "vitest --project unit",
+    "test:integration": "vitest --project nuxt",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@nuxt/eslint": "1.10.0",
@@ -29,9 +34,16 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.20.1",
+    "@testing-library/vue": "^8.1.0",
+    "@vitest/coverage-v8": "^4.0.6",
+    "@vue/test-utils": "^2.4.6",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-oxlint": "^1.25.0",
+    "fast-check": "^4.3.0",
+    "happy-dom": "^20.0.10",
     "oxlint": "^1.25.0",
-    "oxlint-tsgolint": "^0.4.0"
+    "oxlint-tsgolint": "^0.4.0",
+    "vitest": "^4.0.6"
   }
 }
