--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@anatine/zod-mock": "^3.14.0",
     "@nuxt/test-utils": "^3.20.1",
     "@testing-library/vue": "^8.1.0",
     "@vitest/coverage-v8": "^4.0.6",
